# clawRS

./: AGENTS.md  Cargo.toml  README.md  build.bat  build_cuda.bat  build_error.txt  build_output.txt  build_output2.txt
assets/: styles.css
src/: app.rs  lib.rs  main.rs
src/agent/: mod.rs  prompts.rs  tools.rs
src/agent/tools/: exa.rs  pdf.rs
src/inference/: engine.rs  mod.rs  model.rs  streaming.rs
src/storage/: conversations.rs  mod.rs  models.rs  settings.rs
src/system/: gpu.rs  resources.rs
src/types/: message.rs
src/ui/: mod.rs
src/ui/chat/: input.rs  message.rs  mod.rs
src/ui/components/: loading.rs  mod.rs  monitoring.rs  permission_dialog.rs  tool_usage.rs
src/ui/help/: mod.rs
src/ui/settings/: appearance.rs  hardware.rs  inference.rs  mod.rs
src/ui/sidebar/: conversation_list.rs  mod.rs  model_picker.rs
