[package]
name = "clawrs"
version = "0.2.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6", features = ["desktop"] }
tokio = { version = "1", features = ["full", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
llama-cpp-2 = { version = "=0.1.132", features = ["sampler"] }

# Agent/AI capabilities
reqwest = { version = "0.12", features = ["json", "stream"] }
schemars = "0.8"
async-trait = "0.1"
dashmap = "6"
once_cell = "1"
glob = "0.3"
regex = "1"

# PDF manipulation
lopdf = "0.35"
printpdf = "0.7"
pdf-extract = "0.8"

[features]
default = []
cuda = ["llama-cpp-2/cuda"]
vulkan = ["llama-cpp-2/vulkan"]

# CRITICAL: opt-level 2 in dev mode so llama.cpp runs fast even without --release
[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
strip = true
opt-level = 3

[dev-dependencies]
tempfile = "3"
